# feature-store-bundle

./: .env.dist  .gitignore  .pylintrc  .pyre_configuration  LICENSE  README.md  check-crlf.sh  env-init.sh  environment.yml  poetry.toml  pyproject.toml  pyre_check.sh  run_tests.sh
.github/workflows/: codeql-analysis.yml  integration.yml  main.yml  release.yml
src/featurestorebundle/: FeatureStoreBundle.py  FeatureStoreBundleTest.py  general_imports.py  imports.py  time_windows.py
src/featurestorebundle/_config/: .gitignore  config.yaml  config_test.yaml
src/featurestorebundle/attribute/: Attribute.py  AttributeTemplate.py
src/featurestorebundle/checkpoint/: CheckpointDirHandler.py  CheckpointDirSetter.py  CheckpointGuard.py
src/featurestorebundle/databricks/: DatabricksCurrentBranchResolver.py  DatabricksDataHandler.py  DatabricksFeatureStoreClientFactory.py  DatabricksFeatureStoreWriter.py  DatabricksMergeConfig.py
src/featurestorebundle/databricks/featurestore/: DatabricksFeatureStoreClientFactory.py  DatabricksFeatureStoreCreator.py  DatabricksFeatureStoreDataHandler.py  DatabricksFeatureStoreExistenceChecker.py  DatabricksFeatureStorePreparer.py
src/featurestorebundle/databricks/repos/: DatabricksCurrentBranchResolver.py  DatabricksRepositoryUrlResolver.py
src/featurestorebundle/dataframe/: DataFrameSchemaMerger.py  EmptyDataFrameCreator.py
src/featurestorebundle/dataframe/join/: DataFrameJoinerInterface.py  DataFrameJoinerTest.py  LeftWithCheckpointingJoiner.py  UnionWithWindowJoiner.py
src/featurestorebundle/date/: DateParser.py
src/featurestorebundle/db/: TableNames.py  TableNamesTest.py
src/featurestorebundle/delta/: DataFrameSchemaMerger.py  DeltaDataHandler.py  DeltaMergeConfig.py  DeltaMergeConfigGenerator.py  DeltaWriter.py  EmptyDataFrameCreator.py  FeaturesPreparer.py  PathCreator.py  PathExistenceChecker.py  PathSchemaMerger.py  TableCreator.py  TablePropertiesSetter.py  TablePropertySetter.py  TableSchemaMerger.py
src/featurestorebundle/delta/feature/: DeltaRainbowTableManager.py  FeaturesFilteringManager.py  FeaturesFilteringManagerLatestTest.py  FeaturesFilteringManagerTargetsTest.py  FeaturesJoiner.py  FeaturesJoinerTest.py  FeaturesPreparer.py  FeaturesPreparerTest.py  NullHandler.py  NullHandlerTest.py  schema.py
src/featurestorebundle/delta/join/: DataFrameJoinerTest.py  LeftWithCheckpointingJoiner.py  UnionWithWindowJoiner.py
src/featurestorebundle/delta/metadata/: filter.py  schema.py
src/featurestorebundle/delta/tests/: DeltaMergeConfigTest.py  PrepareFeaturesTest.py
src/featurestorebundle/entity/: Entity.py  EntityGetter.py  getter.py
src/featurestorebundle/exception/: error.py
src/featurestorebundle/feature/: ChangesCalculator.py  CheckpointGuard.py  EmptyDataFrameCreator.py  EmptyFileCreator.py  EmptyTableCreator.py  Feature.py  FeatureChangesTest.py  FeatureDataMerger.py  FeatureInstance.py  FeatureList.py  FeatureListFactory.py  FeatureListFactoryTest.py  FeatureManager.py  FeatureNamesValidator.py  FeaturePattern.py  FeaturePatternTest.py  FeatureStore.py  FeatureStoreStorageInfo.py  FeatureTemplate.py  FeatureTemplateMatcher.py  FeatureWithChange.py  FeatureWithChangeTemplate.py  FeaturesGetter.py  FeaturesManager.py  FeaturesPreparer.py  FeaturesStorage.py  FeaturesValidator.py  MasterFeature.py  NullHandler.py  NullHandlerTest.py  TablePreparer.py  features_reader.py
src/featurestorebundle/feature/deleter/: FeaturesDeleter.py  FeaturesDeleterInterface.py
src/featurestorebundle/feature/getter/: FeaturesGetterFacade.py  LatestFeaturesGetter.py  TargetFeaturesGetter.py
src/featurestorebundle/feature/reader/: FeaturesReader.py  FeaturesReaderFactory.py  FeaturesReaderInterface.py  FeaturesTableReader.py
src/featurestorebundle/feature/tests/: FeatureChangesTest.py
src/featurestorebundle/feature/writer/: AddColumnsQueryBuilder.py  AddColumnsQueryBuilderTest.py  FeaturesJoiner.py  FeaturesMergeConfig.py  FeaturesMergeConfigGenerator.py  FeaturesMergeConfigGeneratorTest.py  FeaturesPreparer.py  FeaturesPreparerTest.py  FeaturesTableDataHandler.py  FeaturesTablePreparer.py  FeaturesTableRegistrator.py  FeaturesTableWriter.py  FeaturesWriter.py  FeaturesWriterInjector.py  FeaturesWriterInterface.py  LatestSnapshotCreator.py
src/featurestorebundle/frequency/: Frequencies.py  FrequencyChecker.py  FrequencyGuard.py
src/featurestorebundle/metadata/: DescriptionFiller.py  FeaturePattern.py  MetadataExtractor.py  MetadataHTMLDisplayer.py  MetadataTablePreparer.py  MetadataTest.py  MetadataValidator.py  MetadataWriter.py  TimeWindowHandler.py  schema.py
src/featurestorebundle/metadata/deleter/: MetadataDeleter.py  (+1 more)
src/featurestorebundle/notebook/: WindowedDataFrame.py
src/featurestorebundle/orchestration/: CurrentNotebookDefinitionGetter.py  DatabricksOrchestrator.py  FrequencyGuard.py  NotebookDefinitionGetter.py  NotebookTask.py  NotebookTasksFactory.py  PostActionInterface.py  PostActionsRunner.py  Serializator.py  Serializer.py  TablesValidator.py
src/featurestorebundle/table/: TableCreator.py  TableExistenceChecker.py  TableSchemaMerger.py
src/featurestorebundle/test/: DummyCurrentNotebookDefinitionGetter.py  DummyDatabricksCurrentBranchResolver.py  DummyNotebookNameGetter.py  DummySparkFactory.py  PySparkTestCase.py  SparkSessionFactory.py
src/featurestorebundle/utils/: ColumnChecker.py  DateParser.py  TypeChecker.py  column.py  errors.py  types.py
src/featurestorebundle/widgets/: DryRunHandler.py  StageGetter.py  WidgetNames.py  WidgetsFactory.py  WidgetsGetter.py
src/featurestorebundle/windows/: WindowedCol.py  WindowedColForAgg.py  WindowedCols.py  WindowedDataFrame.py  functions.py  windowed_features.py
(+70 files in other folders)
