[tool.poetry]
name = "feature-store-bundle"
version = "1.3.0b4"
description = "Feature Store for the Daipe AI Platform"
readme = "README.md"
repository = "https://github.com/daipe-ai/feature-store-bundle"

license = "Proprietary"

authors = [
    "Datasentics <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "featurestorebundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyfony-bundles = "0.4.*"
daipe-core = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyre-check-nightly = { version = "^0.0.101638533492", markers = "sys_platform == 'linux'"}
black = "^20.8b1"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"
pyspark = "^3"
delta-spark = "^1.0.0"
ipython = "^7.30.1"
pylint = "^2.12.2"

[tool.poetry.plugins."pyfony.bundle"]
create = "featurestorebundle.FeatureStoreBundle:FeatureStoreBundle"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "featurestorebundle"

[tool.black]
line-length = 140

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
pylint = "pylint --rcfile=.pylintrc --module-rgx=.+ src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
