[tool.poetry]
name = "feature-store-bundle"
version = "1.4.0"
description = "Feature Store for the Daipe AI Platform"
readme = "README.md"
repository = "https://github.com/daipe-ai/feature-store-bundle"

license = "Proprietary"

authors = [
    "Datasentics <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "featurestorebundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
daipe-core = "^1.2"
pyfony-bundles = "0.4.*"

[tool.poetry.dev-dependencies]
pyspark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/pyspark-3.2.0-py2.py3-none-any.whl"}
delta-spark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/delta_spark-1.1.0-py3-none-any.whl"}
mlflow = "^1.23.1"
ipython = "^7.30.1"
pytest = "^6.0"
pyre-check-nightly = { version = "^0.0.101638533492", markers = "sys_platform == 'linux'"}
pylint = "^2.12.2"
black = "^20.8b1"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"

[tool.poetry.plugins."pyfony.bundle"]
create = "featurestorebundle.FeatureStoreBundle:FeatureStoreBundle"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "featurestorebundle"

[tool.black]
line-length = 140

[tool.pylint.basic]
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"

[tool.pylint.messages_control]
max-line-length = 140
disable = [
    "missing-docstring",
    "wrong-import-order",
    "duplicate-code",
    "line-too-long",
    "bad-continuation",
    "too-many-arguments",
    "too-few-public-methods",
    "ungrouped-imports",
    "no-self-use",
]
good-names = ["df", "sc", "i", "n"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["*_test.py", "*Test.py"]

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
pylint = "pylint src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
