[tool.poetry]
name = "feature-store-bundle"
version = "2.11.0"
description = "Feature Store for the Daipe AI Platform"
readme = "README.md"
repository = "https://github.com/daipe-ai/feature-store-bundle"

license = "Proprietary"

authors = [
    "Datasentics <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "featurestorebundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
daipe-core = "^1.4.2"
pyfony-bundles = "~0.4.4"
databricks-bundle = "^1.4.12"

[tool.poetry.dev-dependencies]
pyspark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/pyspark-3.2.0-py2.py3-none-any.whl"}
delta-spark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/delta_spark-1.1.0-py3-none-any.whl"}
pyre-check = "^0.9.10"
pylint = "^2.12.2"
black = "^22.0.0"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"
mlflow-skinny = "^1.27.0"

[tool.poetry.plugins."pyfony.bundle"]
create = "featurestorebundle.FeatureStoreBundle:FeatureStoreBundle"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "featurestorebundle"

[tool.black]
line-length = 140

[tool.pylint.basic]
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "wrong-import-order",
    "duplicate-code",
    "line-too-long",
    "bad-continuation",
    "too-many-arguments",
    "too-few-public-methods",
    "ungrouped-imports",
    "no-self-use",
]
good-names = ["e", "i", "k", "n", "f", "v", "df", "sc"]

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
pylint = "pylint src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
